hw ffmpeg encoding

--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -77,7 +77,7 @@
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
         "!pip install ftfy==5.8 transformers==4.6.0\n",
-        "!pip install gputil \n",
+        "!pip install gputil ffpb \n",
         "\n",
         "try: \n",
         "  !pip3 install googletrans==3.1.0a0\n",
@@ -95,7 +95,7 @@
         "import PIL\n",
         "from collections import OrderedDict\n",
         "from base64 import b64encode\n",
-        "from moviepy.editor import ImageSequenceClip\n",
+        "# from moviepy.editor import ImageSequenceClip\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -215,8 +215,10 @@
         "model_vqgan  = load_vqgan(config_vqgan, ckpt_path=\"/content/models_TT/%s.ckpt\" % VQGAN_model).cuda()\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
+        "  out_sequence = seq_dir + '/%04d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
+        "  !ffpb -y -i $out_sequence -codec nvenc $out_video\n",
+        "  # ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
