--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -128,7 +128,7 @@
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, slice_imgs, derivat, checkout\n",
+        "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale, slice_imgs, derivat, checkout\n",
         "from utils import pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
@@ -244,7 +244,7 @@
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
-        "model = 'ViT-B/16' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "use_wavelets = False #@param {type:\"boolean\"}\n",
         "wave = 'coif1' #@param ['db2', 'db3', 'db4', 'coif1', 'coif2', 'coif3', 'coif4']\n",
@@ -277,20 +277,24 @@
         "    if os.path.splitext(resumed_filename)[1].lower()[1:] in ['jpg','png','tif','bmp']:\n",
         "      img_in = imageio.imread(resumed_bytes)\n",
         "      init_pt = img2dwt(img_in, wave, 1.5)\n",
+        "      scale = dwt_scale(init_pt, sharpness)\n",
+        "      for i in range(len(init_pt)-1):\n",
+        "        init_pt[i+1] /= (scale[i] * 10)\n",
         "      sideY, sideX = img_in.shape[0], img_in.shape[1]\n",
         "    else:\n",
         "      init_pt = torch.load(io.BytesIO(resumed_bytes))\n",
         "      # init_pt = [y.detach().cuda() for y in init_pt]\n",
         "  else:\n",
-        "    init_pt = init_dwt(None, shape, wave, colors)\n",
+        "    init_pt, _, _, _ = init_dwt(None, shape, wave, colors)\n",
         "\n",
+        "  shape = [1, 3, sideY, sideX]\n",
         "  params, image_f, _ = dwt_image(shape, wave, sharpness, colors, init_pt)\n",
         "\n",
         "else:\n",
         "  if resume is True:\n",
         "    if os.path.splitext(resumed_filename)[1].lower()[1:] in ['jpg','png','tif','bmp']:\n",
         "      img_in = imageio.imread(resumed_bytes)\n",
-        "      init_pt = img2fft(img_in, 1.5, 1.5)\n",
+        "      init_pt = img2fft(img_in, 1.5, 1.5) * 0.1\n",
         "    else:\n",
         "      init_pt = torch.load(io.BytesIO(resumed_bytes))\n",
         "      if isinstance(init_pt, list): init_pt = init_pt[0]\n",
@@ -300,6 +304,7 @@
         "    params_shape = [1, 3, sideY, sideX//2+1, 2]\n",
         "    init_pt = torch.randn(*params_shape) * 0.01\n",
         "\n",
+        "  shape = [1, 3, sideY, sideX]\n",
         "  params, image_f, _ = fft_image(shape, 1, decay, init_pt)\n",
         "\n",
         "image_f = to_valid_rgb(image_f, colors = colors)\n",
