--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -37,12 +37,13 @@
         "# Text to Image tool\n",
         "\n",
         "The part of [Aphantasia](https://github.com/eps696/aphantasia) series.  \n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla), [@eduwatch2](https://twitter.com/eduwatch2) for ideas\n",
         "\n",
         "## Features \n",
-        "* generates [FFT-](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) (Fourier) or DWT- (wavelets) -encoded image (massive detailed textures, a la deepdream)\n",
-        "* undemanding for RAM - fullHD/4K and above\n",
+        "* generates massive detailed imagery, a la deepdream \n",
+        "* high resolution (up to 12K on RTX 3090)\n",
+        "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) [Fourier] or DWT [wavelets] (no pretrained GANs)\n",
         "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* starting/resuming process from saved FFT parameters or from an image\n",
         "* complex requests:\n",
