--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -24,13 +24,13 @@
         "# Illustra: Multi-text to Image\n",
         "\n",
         "The part of [Aphantasia](https://github.com/eps696/aphantasia) series.  \n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
         "## Features \n",
         "* **continuously processes phrase lists** (e.g. illustrating lyrics)\n",
-        "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\n",
-        "* undemanding for RAM - fullHD/4K and above\n",
+        "* generates massive detailed high res imagery, a la deepdream\n",
+        "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) (no pretrained GANs)\n",
         "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* saving/loading FFT snapshots to resume processing\n",
         "* separate text prompt for image style\n"
