--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -129,8 +129,8 @@
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale, slice_imgs, derivat, checkout\n",
-        "from utils import pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
+        "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale\n",
+        "from utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
