--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -125,8 +125,7 @@
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import slice_imgs\n",
-        "from utils import pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
+        "from utils import slice_imgs, pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
