--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -112,13 +112,15 @@
         "import kornia\n",
         "!pip install lpips\n",
         "import lpips\n",
+        "!pip install PyWavelets==1.1.1\n",
+        "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
         "\n",
         "%cd /content\n",
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, derivat, checkout \n",
-        "from utils import pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text\n",
+        "from clip_fft import to_valid_rgb, fft_image\n",
+        "from utils import slice_imgs, derivat, pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text, checkout \n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
