--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -68,12 +68,13 @@
         "!apt-get -qq install ffmpeg\n",
         "from google.colab import drive\n",
         "drive.mount('/G', force_remount=True)\n",
-        "gdir = !ls /G/\n",
-        "gdir = '/G/%s/' % str(gdir[0])\n",
+        "# gdir = !ls /G/\n",
+        "# gdir = '/G/%s/' % str(gdir[0])\n",
+        "gdir = '/G/MyDrive/'\n",
         "%cd $gdir\n",
         "work_dir = 'illustra'\n",
-        "work_dir = gdir + work_dir + '/'\n",
         "import os\n",
+        "work_dir = os.path.join(gdir, work_dir)\n",
         "os.makedirs(work_dir, exist_ok=True)\n",
         "%cd $work_dir\n",
         "\n",
@@ -229,7 +230,7 @@
         "# drive.mount('/content/GDrive')\n",
         "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
         "\n",
-        "style = \"black and white film\" #@param {type:\"string\"}\n",
+        "style = \"\" #@param {type:\"string\"}\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
         "duration =  60#@param {type:\"integer\"}\n",
