--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -315,7 +315,7 @@
         "\n",
         "if resume is True:\n",
         "  # print(' resuming from', resumed)\n",
-        "  # params, _ = fft_image([1, 3, sideY, sideX], resume = params_pt, sd=1.)\n",
+        "  # params, _, _ = fft_image([1, 3, sideY, sideX], resume = params_pt, sd=1.)\n",
         "  params_start = params_pt.cuda()\n",
         "  if keep > 0:\n",
         "    params_ema = params[0].detach()\n",
@@ -432,7 +432,7 @@
         "  params1 = read_pt(ptfiles[px])\n",
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
-        "  params, image_f = fft_image([1, 3, sideY, sideX], resume=params1, sd=1., decay_power=decay)\n",
+        "  params, image_f, _ = fft_image([1, 3, sideY, sideX], resume=params1, sd=1., decay_power=decay)\n",
         "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
@@ -481,7 +481,7 @@
         "  params1 = read_pt(ptfiles[px])\n",
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
-        "  params, image_f = fft_image(shape, resume=params1)\n",
+        "  params, image_f, _ = fft_image(shape, resume=params1)\n",
         "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
