pytorch version fix

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -121,7 +121,7 @@
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image\n",
-        "from utils import slice_imgs, derivat, pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text, checkout \n",
+        "from utils import slice_imgs, derivat, pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text, checkout, old_torch \n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
@@ -260,8 +260,7 @@
         "fps = 25\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "\n",
-        "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
-        "model_clip, _ = clip.load(model, jit=use_jit)\n",
+        "model_clip, _ = clip.load(model, jit=old_torch())\n",
         "modsize = model_clip.visual.input_resolution\n",
         "xmem = {'ViT-B/16':0.25, 'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
         "if model in xmem.keys():\n",
