--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -130,7 +130,7 @@
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale\n",
-        "from utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout\n",
+        "from utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout, old_torch\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
@@ -321,8 +321,7 @@
         "  samples = int(samples * 0.75)\n",
         "print(' using %d samples' % samples)\n",
         "\n",
-        "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
-        "model_clip, _ = clip.load(model, jit=use_jit)\n",
+        "model_clip, _ = clip.load(model, jit=old_torch())\n",
         "modsize = model_clip.visual.input_resolution\n",
         "xmem = {'ViT-B/16':0.25, 'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
         "if model in xmem.keys():\n",
