--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -36,8 +36,9 @@
       "source": [
         "# Text to Image tool\n",
         "\n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + VQGAN from [Taming Transformers](https://github.com/CompVis/taming-transformers) // made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas\n",
+        "Part of [Aphantasia](https://github.com/eps696/aphantasia) suite, made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + VQGAN from [Taming Transformers](https://github.com/CompVis/taming-transformers).  \n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas.\n",
         "\n",
         "## Features \n",
         "* complex requests:\n",
@@ -76,7 +77,7 @@
         "VQGAN_model = \"gumbel_f8-8192\" #@param ['gumbel_f8-8192', 'imagenet_f16-1024', 'imagenet_f16-16384']\n",
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
-        "!pip install ftfy==5.8 transformers==4.6.0\n",
+        "!pip install ftfy==5.8 transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
         "try: \n",
@@ -95,7 +96,6 @@
         "import PIL\n",
         "from collections import OrderedDict\n",
         "from base64 import b64encode\n",
-        "# from moviepy.editor import ImageSequenceClip\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -214,10 +214,11 @@
         "model_vqgan  = load_vqgan(config_vqgan, ckpt_path=\"/content/models_TT/%s.ckpt\" % VQGAN_model).cuda()\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
-        "  out_sequence = seq_dir + '/%04d.jpg'\n",
+        "  char_len = len(basename(img_list(seq_dir)[0]))\n",
+        "  out_sequence = seq_dir + '/%0{}d.jpg'.format(char_len)\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  !ffpb -y -i $out_sequence -codec nvenc $out_video\n",
-        "  # ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
+        "  # !ffpb -y -i $out_sequence -c:v nvenc -crf 18 $out_video\n",
+        "  !ffpb -y -i $out_sequence -crf 18 $out_video\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
@@ -310,7 +311,7 @@
         "sideX = 900 #@param {type:\"integer\"}\n",
         "sideY =  500#@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
-        "model = 'ViT-B/16' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "aug_transform = True #@param {type:\"boolean\"}\n",
         "sync =  0.4 #@param {type:\"number\"}\n",
