--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -23,8 +23,8 @@
       "source": [
         "# Illustra: Multi-text to Image\n",
         "\n",
-        "The part of [Aphantasia](https://github.com/eps696/aphantasia) series.  \n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
+        "Part of [Aphantasia](https://github.com/eps696/aphantasia) suite, made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent).  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
         "## Features \n",
@@ -235,7 +235,7 @@
         "sideY = 720 #@param {type:\"integer\"}\n",
         "duration =  60#@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
-        "model = 'ViT-B/16' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
+        "model = 'ViT-B/32' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "aug_transform = True #@param {type:\"boolean\"}\n",
         "keep = 0. #@param {type:\"number\"}\n",
@@ -457,7 +457,7 @@
         "\n",
         "duration =  12#@param {type:\"integer\"}\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
-        "colors = 1.3 #@param {type:\"number\"}\n",
+        "colors = 1.5 #@param {type:\"number\"}\n",
         "fps = 25\n",
         "\n",
         "text_file = list(uploaded)[0]\n",
@@ -480,7 +480,7 @@
         "  params1 = read_pt(ptfiles[px])\n",
         "  params2 = read_pt(ptfiles[(px+1) % len(ptfiles)])\n",
         "\n",
-        "  params, image_f, _ = fft_image(shape, resume=params1)\n",
+        "  params, image_f, _ = fft_image(shape, resume=params1, decay_power=decay)\n",
         "  image_f = to_valid_rgb(image_f, colors = colors)\n",
         "\n",
         "  for i in range(vsteps):\n",
