--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -211,6 +211,7 @@
         "\n",
         "assert len(texts) > 0 and len(texts[0]) > 0, 'No input text[s] found!'\n",
         "tempdir = os.path.join(work_dir, workname)\n",
+        "os.makedirs(tempdir, exist_ok=True)\n",
         "print('main dir', tempdir)"
       ],
       "execution_count": null,
@@ -233,7 +234,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Google Drive connection\n",
+        "#@title Google Drive [optional]\n",
         "\n",
         "#@markdown Run this cell, if you want to store results on your Google Drive.\n",
         "using_GDrive = True#@param{type:\"boolean\"}\n",
