--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -436,7 +436,7 @@
         "# revealed from the changed perspective to be filled/detailed \n",
         "\n",
         "# pretrained models: Nyu is much better but Kitti is an option too\n",
-        "depth_model = 'nyu'#@param [\"nyu\",\"kitti\"]\n",
+        "depth_model = 'nyu' # @ param [\"nyu\",\"kitti\"]\n",
         "workdir_depth = \"/content\"\n",
         "DepthStrength = 0.01 #@param{type:\"number\"}\n",
         "MaskBlurAmt = 33 #@param{type:\"integer\"}\n",
@@ -482,12 +482,14 @@
         "%cd $workdir_depth\n",
         "if not os.path.exists('pretrained'):\n",
         "  !mkdir pretrained\n",
-        "if depth_model=='nyu' and not os.path.exists(os.path.join(workdir_depth, \"pretrained/AdaBins_nyu.pt\")):\n",
+        "if not os.path.exists(os.path.join(workdir_depth, \"pretrained/AdaBins_nyu.pt\")):\n",
         "  !gdown https://drive.google.com/uc?id=1lvyZZbC9NLcS8a__YPcUP7rDiIpbRpoF\n",
+        "  if not os.path.exists('AdaBins_nyu.pt'):\n",
+        "    !wget https://www.dropbox.com/s/r1zyrfypixviwa8/AdaBins_nyu.pt\n",
         "  !mv AdaBins_nyu.pt pretrained/AdaBins_nyu.pt\n",
-        "if depth_model=='kitti' and not os.path.exists(os.path.join(workdir_depth, \"pretrained/AdaBins_kitti.pt\")):\n",
-        "  !gdown https://drive.google.com/uc?id=1HMgff-FV6qw1L0ywQZJ7ECa9VPq1bIoj\n",
-        "  !mv AdaBins_kitti.pt pretrained/AdaBins_kitti.pt\n",
+        "# if depth_model=='kitti' and not os.path.exists(os.path.join(workdir_depth, \"pretrained/AdaBins_kitti.pt\")):\n",
+        "  # !gdown https://drive.google.com/uc?id=1HMgff-FV6qw1L0ywQZJ7ECa9VPq1bIoj\n",
+        "  # !mv AdaBins_kitti.pt pretrained/AdaBins_kitti.pt\n",
         "\n",
         "############ Mask is for blending multi-crop depth \n",
         "global mask_blurred\n",
