video quality fix

--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -142,7 +142,8 @@
         "  char_len = len(basename(img_list(seq_dir)[0]))\n",
         "  out_sequence = seq_dir + '/%0{}d.jpg'.format(char_len)\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  !ffpb -y -i $out_sequence -codec nvenc -crf 18 $out_video\n",
+        "  print(".. generating video ..")\n",
+        "  !ffmpeg -y -v warning -i $out_sequence -crf 18 $out_video\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
