--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -152,7 +152,8 @@
         "def makevid(seq_dir, size=None):\n",
         "  out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  !ffpb -y -i $out_sequence -codec nvenc $out_video\n",
+        "  print(".. generating video ..")\n",
+        "  !ffmpeg -y -v warning -i $out_sequence -crf 20 $out_video\n",
         "  # moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
