video quality fix

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -145,7 +145,7 @@
         "def makevid(seq_dir, size=None):\n",
         "  out_sequence = seq_dir + '/%04d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  print(".. generating video ..")\n",
+        "  print('.. generating video ..')\n",
         "  !ffmpeg -y -v warning -i $out_sequence -crf 20 $out_video\n",
         "  # moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
