--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -217,7 +217,7 @@
         "  char_len = len(basename(img_list(seq_dir)[0]))\n",
         "  out_sequence = seq_dir + '/%0{}d.jpg'.format(char_len)\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  print(".. generating video ..")\n",
+        "  print('.. generating video ..')\n",
         "  !ffmpeg -y -v warning -i $out_sequence -crf 20 $out_video\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
