--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -913,7 +913,7 @@
         "      if smooth is True:\n",
         "        opt_state = optimizer.state_dict()\n",
         "\n",
-        "    if ii % save_step == 0:\n",
+        "    # if ii % save_step == 0:\n",
         "      with torch.no_grad():\n",
         "        img = image_f(contrast=contrast).cpu().numpy()[0]\n",
         "      save_img(img, os.path.join(tempdir, '%05d.jpg' % glob_step))\n",
