fix after merge

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -78,12 +78,6 @@
         "!pip install ftfy==5.8 transformers==4.6.0\n",
         "!pip install gputil ffpb \n",
         "\n",
-        "try: \n",
-        "  !pip3 install googletrans==3.1.0a0\n",
-        "  from googletrans import Translator, constants\n",
-        "  translator = Translator()\n",
-        "except: pass\n",
-        "\n",
         "import os\n",
         "import io\n",
         "import time\n",
@@ -126,13 +120,11 @@
         "# from pytorch_wavelets import DTCWTForward, DTCWTInverse\n",
         "\n",
         "%cd /content\n",
-        "!rm -rf aphantasia\n",
-        "!git clone https://github.com/eps696/aphantasia\n",
-        "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale\n",
-        "from utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout, old_torch\n",
-        "import transforms\n",
-        "from progress_bar import ProgressIPy as ProgressBar\n",
+        "!pip install git+https://github.com/eps696/aphantasia\n",
+        "from aphantasia.image import to_valid_rgb, fft_image, img2fft, dwt_image, img2dwt, init_dwt, dwt_scale\n",
+        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, checkout, old_torch\n",
+        "from aphantasia import transforms\n",
+        "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "clear_output()\n",
         "\n",
@@ -197,7 +189,11 @@
         "upload_image = False #@param {type:\"boolean\"}\n",
         "\n",
         "if translate:\n",
-        "  text = translator.translate(text, dest='en').text\n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  clear_output()\n",
+        "  from googletrans import Translator\n",
+        "  translator = Translator()\n",
+        "\n",
         "if upload_image:\n",
         "  uploaded = files.upload()\n",
         "\n",
@@ -369,7 +365,6 @@
         "if len(text) > 0:\n",
         "  print(' main topic:', text)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    text = translator.translate(text, dest='en').text\n",
         "    print(' translated to:', text) \n",
         "  txt_enc = enc_text(text)\n",
@@ -380,7 +375,6 @@
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    style = translator.translate(style, dest='en').text\n",
         "    print(' translated to:', style) \n",
         "  txt_enc2 = enc_text(style)\n",
@@ -388,7 +382,6 @@
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    subtract = translator.translate(subtract, dest='en').text\n",
         "    print(' translated to:', subtract) \n",
         "  txt_enc0 = enc_text(subtract)\n",
