--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -80,12 +80,6 @@
         "!pip install ftfy==5.8 transformers\n",
         "!pip install gputil ffpb \n",
         "\n",
-        "try: \n",
-        "  !pip3 install googletrans==3.1.0a0\n",
-        "  from googletrans import Translator, constants\n",
-        "  translator = Translator()\n",
-        "except: pass\n",
-        "\n",
         "import os\n",
         "import io\n",
         "import time\n",
@@ -122,12 +116,10 @@
         "import lpips\n",
         "\n",
         "%cd /content\n",
-        "!rm -rf aphantasia\n",
-        "!git clone https://github.com/eps696/aphantasia\n",
-        "%cd aphantasia/\n",
-        "from utils import slice_imgs, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, old_torch\n",
-        "import transforms\n",
-        "from progress_bar import ProgressIPy as ProgressBar\n",
+        "!pip install git+https://github.com/eps696/aphantasia\n",
+        "from aphantasia.utils import slice_imgs, pad_up_to, basename, img_list, img_read, plot_text, txt_clean, old_torch\n",
+        "from aphantasia import transforms\n",
+        "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "!pip install omegaconf>=2.0.0 pytorch-lightning>=1.0.8 einops>=0.3.0\n",
         "import pytorch_lightning as pl\n",
@@ -268,7 +260,11 @@
         "upload_image = False #@param {type:\"boolean\"}\n",
         "\n",
         "if translate:\n",
-        "  text = translator.translate(text, dest='en').text\n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  clear_output()\n",
+        "  from googletrans import Translator\n",
+        "  translator = Translator()\n",
+        "\n",
         "if upload_image:\n",
         "  uploaded = files.upload()\n",
         "\n",
@@ -382,7 +378,6 @@
         "if len(text) > 0:\n",
         "  print(' text:', text)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    text = translator.translate(text, dest='en').text\n",
         "    print(' translated to:', text) \n",
         "  txt_enc = enc_text(text)\n",
@@ -390,7 +385,6 @@
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    style = translator.translate(style, dest='en').text\n",
         "    print(' translated to:', style) \n",
         "  txt_enc2 = enc_text(style)\n",
@@ -398,7 +392,6 @@
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    subtract = translator.translate(subtract, dest='en').text\n",
         "    print(' translated to:', subtract) \n",
         "  txt_enc0 = enc_text(subtract)\n",
@@ -426,7 +419,7 @@
         "def train(i):\n",
         "  loss = 0\n",
         "  img_out = vqgan_image(model_vqgan, lats())\n",
-        "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align)[0]\n",
+        "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro=0.4)[0]\n",
         "  out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
         "  if len(text) > 0: # input text\n",
