--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -49,7 +49,7 @@
       "source": [
         "**Run the cell below after each session restart**\n",
         "\n",
-        "Ensure that you're given Tesla T4/P4/P100 GPU, not K80!"
+        "Ensure that you're given Tesla T4/P4/P100 GPU. With Tesla K80 it will be ~8x slower."
       ]
     },
     {
@@ -63,12 +63,6 @@
         "\n",
         "!pip install ftfy==5.8 transformers\n",
         "!pip install gputil ffpb \n",
-        "\n",
-        "try: \n",
-        "  !pip3 install googletrans==3.1.0a0\n",
-        "  from googletrans import Translator, constants\n",
-        "  translator = Translator()\n",
-        "except: pass\n",
         "\n",
         "# !apt-get -qq install ffmpeg\n",
         "work_dir = '/content/illustrip'\n",
@@ -116,18 +110,17 @@
         "!pip install PyWavelets==1.1.1\n",
         "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
         "\n",
-        "%cd /content\n",
-        "!rm -rf aphantasia\n",
-        "!git clone https://github.com/eps696/aphantasia\n",
-        "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, rfft2d_freqs, img2fft, pixel_image, un_rgb\n",
-        "from utils import basename, file_list, img_list, img_read, txt_clean, plot_text, old_torch\n",
-        "from utils import slice_imgs, derivat, pad_up_to, slerp, checkout, sim_func, latent_anima\n",
-        "import transforms\n",
-        "import depth\n",
-        "from progress_bar import ProgressIPy as ProgressBar\n",
-        "shutil.copy('mask.jpg', work_dir)\n",
+        "!pip install git+https://github.com/eps696/aphantasia\n",
+        "from aphantasia.image import to_valid_rgb, fft_image, rfft2d_freqs, img2fft, pixel_image, un_rgb\n",
+        "from aphantasia.utils import basename, file_list, img_list, img_read, txt_clean, plot_text, old_torch\n",
+        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, slerp, checkout, sim_func, latent_anima\n",
+        "from aphantasia import transforms\n",
+        "from aphantasia import depth\n",
+        "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
+        "%cd $work_dir\n",
+        "!wget https://github.com/eps696/aphantasia/blob/master/mask.jpg\n",
         "depth_mask_file = os.path.join(work_dir, 'mask.jpg')\n",
+        "%cd /content\n",
         "\n",
         "clear_output()\n",
         "\n",
@@ -181,6 +174,12 @@
         "\n",
         "#@markdown Resume from the saved `.pt` snapshot, or from an image  \n",
         "#@markdown (resolution settings below will be ignored in this case): \n",
+        "\n",
+        "if translate:\n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  clear_output()\n",
+        "  from googletrans import Translator\n",
+        "  translator = Translator()\n",
         "\n",
         "if upload_texts:\n",
         "  print('Upload main text file')\n",
@@ -528,9 +527,6 @@
         "\n",
         "samples = int(samples * sample_decrease)\n",
         "print(' using %s method, %d samples' % (method, samples))\n",
-        "\n",
-        "if translate:\n",
-        "  translator = Translator()\n",
         "\n",
         "def enc_text(txt):\n",
         "  if translate:\n",
