--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -59,12 +59,6 @@
         "!pip install ftfy==5.8 transformers==4.6.0\n",
         "!pip install gputil ffpb \n",
         "\n",
-        "try: \n",
-        "  !pip3 install googletrans==3.1.0a0\n",
-        "  from googletrans import Translator, constants\n",
-        "  translator = Translator()\n",
-        "except: pass\n",
-        "\n",
         "!apt-get -qq install ffmpeg\n",
         "from google.colab import drive\n",
         "drive.mount('/G', force_remount=True)\n",
@@ -117,13 +111,11 @@
         "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
         "\n",
         "%cd /content\n",
-        "!rm -rf aphantasia\n",
-        "!git clone https://github.com/eps696/aphantasia\n",
-        "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image\n",
-        "from utils import slice_imgs, derivat, pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text, checkout, old_torch \n",
-        "import transforms\n",
-        "from progress_bar import ProgressIPy as ProgressBar\n",
+        "!pip install git+https://github.com/eps696/aphantasia\n",
+        "from aphantasia.image import to_valid_rgb, fft_image\n",
+        "from aphantasia.utils import slice_imgs, derivat, pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text, checkout, old_torch \n",
+        "from aphantasia import transforms\n",
+        "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "clear_output()\n",
         "\n",
@@ -183,6 +175,13 @@
         "\n",
         "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "if translate:\n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  clear_output()\n",
+        "  from googletrans import Translator\n",
+        "  translator = Translator()\n",
+        "\n",
         "uploaded = files.upload()\n",
         "\n",
         "#@markdown (`multilang` = multi-language CLIP model, trained with ViT, \n",
@@ -294,7 +293,6 @@
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    style = translator.translate(style, dest='en').text\n",
         "    print(' translated to:', style) \n",
         "  txt_enc2 = enc_text(style)\n",
@@ -343,7 +341,6 @@
         "    \n",
         "  print(' topic: ', txt)\n",
         "  if translate:\n",
-        "    translator = Translator()\n",
         "    txt = translator.translate(txt, dest='en').text\n",
         "    print(' translated to:', txt)\n",
         "  txt_enc = enc_text(txt)\n",
