--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -118,7 +118,7 @@
         "from aphantasia import depth\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "%cd $work_dir\n",
-        "!wget https://github.com/eps696/aphantasia/blob/master/mask.jpg\n",
+        "!wget https://github.com/eps696/aphantasia/blob/master/mask.jpg?raw=true -O mask.jpg\n",
         "depth_mask_file = os.path.join(work_dir, 'mask.jpg')\n",
         "%cd /content\n",
         "\n",
@@ -311,6 +311,7 @@
         "if model in xmem.keys():\n",
         "  sample_decrease *= xmem[model]\n",
         "\n",
+        "%cd $work_dir\n",
         "clear_output()\n",
         "print(' using CLIP model', model)"
       ],
@@ -447,6 +448,8 @@
         "\n",
         "#@markdown Courtesy of [deKxi](https://twitter.com/deKxi)\n",
         "\n",
+        "%cd $work_dir\n",
+        "\n",
         "if DepthStrength > 0:\n",
         "\n",
         "  if not os.path.exists(\"AdaBins_nyu.pt\"):\n",
@@ -463,7 +466,7 @@
         "  else:\n",
         "    depthdir = None\n",
         "\n",
-        "  depth_infer, depth_mask = depth.init_adabins(model_path='AdaBins_nyu.pt', mask_path='mask.jpg', size=size)\n",
+        "  depth_infer, depth_mask = depth.init_adabins(size=size, model_path='AdaBins_nyu.pt', mask_path=depth_mask_file)\n",
         "\n",
         "  def depth_transform(img_t, img_np, depth_infer, depth_mask, size, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
         "\n",
@@ -545,7 +548,6 @@
         "# !rm -rf $tempdir\n",
         "# os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
-        "# opt_steps = steps * save_step # for optimization\n",
         "glob_steps = count * steps # saving\n",
         "if glob_steps == frame_step: frame_step = glob_steps // 2 # otherwise no motion\n",
         "\n",
@@ -578,7 +580,6 @@
         "    params_tmp = torch.randn(*params_shape).cuda() * 0.01\n",
         "  \n",
         "params_tmp = params_tmp.detach()\n",
-        "# function() = torch.transformation(linear)\n",
         "\n",
         "# animation controls\n",
         "if animate_them:\n",
@@ -689,8 +690,8 @@
         "      out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
         "      if method == 'RGB': # empirical hack\n",
-        "        loss += 1.5 * abs(img_out.mean((2,3)) - 0.45).mean() # fix brightness\n",
-        "        loss += 1.5 * abs(img_out.std((2,3)) - 0.17).sum() # fix contrast\n",
+        "        loss += abs(img_out.mean((2,3)) - 0.45).mean() # fix brightness\n",
+        "        loss += abs(img_out.std((2,3)) - 0.17).sum() # fix contrast\n",
         "\n",
         "      if txt_enc is not None:\n",
         "        loss -= sim_func(txt_enc, out_enc, similarity_function)\n",
