separate depth dir

--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -115,11 +115,15 @@
         "from aphantasia.utils import basename, file_list, img_list, img_read, txt_clean, plot_text, old_torch\n",
         "from aphantasia.utils import slice_imgs, derivat, pad_up_to, slerp, checkout, sim_func, latent_anima\n",
         "from aphantasia import transforms\n",
-        "from aphantasia import depth\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
+        "\n",
         "%cd $work_dir\n",
-        "!wget https://github.com/eps696/aphantasia/blob/master/mask.jpg?raw=true -O mask.jpg\n",
-        "depth_mask_file = os.path.join(work_dir, 'mask.jpg')\n",
+        "!git clone https://github.com/eps696/aphantasia --recursive\n",
+        "work_dir = os.path.join(work_dir, 'aphantasia')\n",
+        "%cd $work_dir\n",
+        "from depth import depth\n",
+        "# !wget https://github.com/eps696/aphantasia/blob/master/mask.jpg?raw=true -O mask.jpg\n",
+        "depth_mask_file = os.path.join(work_dir, 'depth', 'mask.jpg')\n",
         "%cd /content\n",
         "\n",
         "clear_output()\n",
