faster aug transforms

--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -372,7 +372,7 @@
         "learning_rate = 1. #@param {type:\"number\"}\n",
         "\n",
         "#@markdown > Tricks\n",
-        "aug_transform = 'custom' #@param ['elastic', 'custom', 'none']\n",
+        "aug_transform = 'fast' #@param ['fast', 'custom', 'elastic', 'none']\n",
         "aug_noise = 0. #@param {type:\"number\"}\n",
         "macro = 0.4 #@param {type:\"number\"}\n",
         "enforce = 0. #@param {type:\"number\"}\n",
@@ -526,6 +526,10 @@
         "elif aug_transform == 'custom':\n",
         "  trform_f = transforms.transforms_custom  \n",
         "  sample_decrease *= 0.95\n",
+        "elif aug_transform == 'fast':\n",
+        "  trform_f = transforms.transforms_fast\n",
+        "  sample_decrease *= 0.95\n",
+        "  print(' using fast aug transforms')\n",
         "else:\n",
         "  trform_f = transforms.normalize()\n",
         "\n",
