--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -354,7 +354,7 @@
         "        \n",
         "sign = 1. if invert else -1.\n",
         "if aug_transform:\n",
-        "  trform_f = transforms.transforms_elastic\n",
+        "  trform_f = transforms.transforms_fast\n",
         "  samples = int(samples * 0.95)\n",
         "else:\n",
         "  trform_f = transforms.normalize()\n",
