--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -279,7 +279,7 @@
         "  samples = int(samples * 0.5)\n",
         "        \n",
         "if aug_transform is True:\n",
-        "  trform_f = transforms.transforms_elastic\n",
+        "  trform_f = transforms.transforms_fast\n",
         "  samples = int(samples * 0.95)\n",
         "else:\n",
         "  trform_f = transforms.normalize()\n",
