--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -473,13 +473,13 @@
         "  depth_infer, depth_mask = depth.init_adabins(size=size, model_path='AdaBins_nyu.pt', mask_path=depth_mask_file)\n",
         "\n",
         "  def depth_transform(img_t, img_np, depth_infer, depth_mask, size, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
-        "\n",
+        "    if not isinstance(scale, float): scale = float(scale[0])\n",
         "    # d X/Y define the origin point of the depth warp, effectively a \"3D pan zoom\", [-1..1]\n",
         "    # plus = look ahead, minus = look aside\n",
         "    dX = 100. * shift[0] / size[1]\n",
         "    dY = 100. * shift[1] / size[0]\n",
         "    # dZ = movement direction: 1 away (zoom out), 0 towards (zoom in), 0.5 stay\n",
-        "    dZ = 0.5 + 23. * (scale[0]-1) \n",
+        "    dZ = 0.5 + 23. * (scale-1) \n",
         "    # dZ += 0.5 * float(math.sin(((save_num % 70)/70) * math.pi * 2))\n",
         "    \n",
         "    if img_np is None:\n",
