--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -121,7 +121,7 @@
         "from aphantasia import transforms\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
-        "!pip install omegaconf>=2.0.0 pytorch-lightning>=1.0.8 einops>=0.3.0\n",
+        "!pip install omegaconf>=2.0.0 torchmetrics==0.6.2 pytorch-lightning>=1.0.8 einops>=0.3.0\n",
         "import pytorch_lightning as pl\n",
         "!git clone https://github.com/CompVis/taming-transformers\n",
         "!mv taming-transformers/* ./\n",
